model: train decision tree baseline

--- a/DecisionTree_titanic.ipynb
+++ b/DecisionTree_titanic.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 60,
    "id": "f27999a9-794f-4ab5-863b-c6bb5faf4b26",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix"
    ]
   },
   {
@@ -557,6 +559,47 @@
     ")\n",
     "\n",
     "X_train.shape, X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "7d3b17ed-c16e-4c32-aa6d-2b34d4b8bdfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8156424581005587\n",
+      "\n",
+      "Confusion matrix:\n",
+      " [[94 16]\n",
+      " [17 52]]\n",
+      "\n",
+      "Classification report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.85      0.85      0.85       110\n",
+      "           1       0.76      0.75      0.76        69\n",
+      "\n",
+      "    accuracy                           0.82       179\n",
+      "   macro avg       0.81      0.80      0.80       179\n",
+      "weighted avg       0.82      0.82      0.82       179\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train Decision Tree baseline\n",
+    "clf = DecisionTreeClassifier(random_state=42)\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = clf.predict(X_test)\n",
+    "\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
+    "print(\"\\nConfusion matrix:\\n\", confusion_matrix(y_test, y_pred))\n",
+    "print(\"\\nClassification report:\\n\", classification_report(y_test, y_pred))"
    ]
   }
  ],
