experiment: evaluate decision tree performance across different depth values

--- a/DecisionTree_titanic.ipynb
+++ b/DecisionTree_titanic.ipynb
@@ -576,7 +576,23 @@
    "cell_type": "markdown",
    "id": "83183d24-54cd-4cfc-9854-74e2ce471700",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Survival Rate Analysis\r\n",
+    "\r\n",
+    "To understand which features were associated with higher or lower survival probability, \r\n",
+    "we computed survival rates across key categorical and discrete variables:\r\n",
+    "\r\n",
+    "**Pclass:** Survival rate increases strongly with class — passengers of 1st class survived much more often than 2nd or 3rd class, reflecting better physical access to lifeboats.\r\n",
+    "\r\n",
+    "**Sex:** Females survived at a dramatically higher rate than males, consistent with the “women and children first” evacuation policy.\r\n",
+    "\r\n",
+    "**Embarked:** Port of embarkation shows weaker effects, but passengers from port C tend to have slightly higher survival rates.\r\n",
+    "\r\n",
+    "**SibSp and Parch:** Passengers traveling completely alone or in very large families had lower chances of survival, while small families (1–2 relatives) survived more often.\r\n",
+    "\r\n",
+    "These patterns help us understand the structure behind the model’s future feature importances\r\n",
+    "and validate that the dataset follows historically expected behaviors.\r\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -942,6 +958,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 109,
+   "id": "6df3672c-e9dc-4bd2-8be9-33fb9ba24c04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tree depth: 20\n",
+      "Number of leaves: 156\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Tree depth:\", clf.get_depth())\n",
+    "print(\"Number of leaves:\", clf.get_n_leaves())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 81,
    "id": "2c4350d9-bcba-4617-9dae-2207541ad632",
    "metadata": {},
@@ -1006,6 +1042,59 @@
     "Consequently, **Fare** and **Pclass** capture socio-economic status, where higher-class passengers had better access to lifeboats.  \r\n",
     "Family-related features (**SibSp**, **Parch**) contribute less but still provide useful information about group survival patterns.  \r\n",
     "**Embarked** also shows minimal importance.\r\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "80e7d7d7-77af-419c-8431-54a734cde3fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Depth=2: accuracy = 0.7598\n",
+      "Depth=4: accuracy = 0.7989\n",
+      "Depth=6: accuracy = 0.8045\n",
+      "Depth=None: accuracy = 0.8156\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Experimental evaluation of the model performance for different tree depths\n",
+    "# to detect underfitting (too shallow) vs overfitting (too deep)\n",
+    "# Depth values tested: 2, 4, 6, and None (unrestricted depth)\n",
+    "\n",
+    "depths = [2, 4, 6, None]\n",
+    "results = {}\n",
+    "\n",
+    "for d in depths:\n",
+    "    model = DecisionTreeClassifier(max_depth=d, random_state=42)\n",
+    "    model.fit(X_train, y_train)\n",
+    "    pred = model.predict(X_test)\n",
+    "    acc = accuracy_score(y_test, pred)\n",
+    "    \n",
+    "    results[d] = acc\n",
+    "    print(f\"Depth={d}: accuracy = {acc:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36612e4d-07cd-4a09-8b64-f557b4514478",
+   "metadata": {},
+   "source": [
+    "## Interpretation of Depth Experiment Results\r\n",
+    "\r\n",
+    "Testing different values of `max_depth` shows a clear pattern in model behavior:\r\n",
+    "\r\n",
+    "- **Depth = 2** yields the lowest accuracy (0.7598), indicating **underfitting** — the model is too simple and cannot capture the structure of the data.\r\n",
+    "- **Depth = 4** improves accuracy (0.7989), but the decision boundary remains not expressive enough.\r\n",
+    "- **Depth = 6** performs better (0.8045), suggesting a more optimal balance between complexity and generalization.\r\n",
+    "- **Depth = None** (unrestricted depth) provides the highest accuracy (0.8156).  \r\n",
+    "  This means that, for the Titanic dataset, deeper trees still capture meaningful interactions between features without strong overfitting on the test set.\r\n",
+    "\r\n",
+    "Overall, increasing tree depth reduces underfitting. In this experiment, the **unrestricted-depth tree performed best**, indicating that the model benefits from additional depth on this dataset.\r\n"
    ]
   }
  ],
